force-app/main/default/objects/SCOC__LCCharacteristic__c/SCOC__LCCharacteristic__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Characteristics List</description>
    <label>LCCharacteristic</label>
    <nameField>
        <displayFormat>LCCHAR-{00000}</displayFormat>
        <label>Liquid Credit Characteristic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCCharacteristics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>