force-app/main/default/objects/SCOC__LCCharacteristic__c/fields/SCOC__CharacteristicDataType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CharacteristicDataType__c</fullName>
    <description>The type of this characteristic value.</description>
    <label>Characteristic Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>