force-app/main/default/objects/SCOC__LCCharacteristic__c/fields/SCOC__CharacteristicKey__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CharacteristicKey__c</fullName>
    <description>This field contains the characteristic key returned in the Liquid Credit Response for this entity data source analysis.</description>
    <label>Characteristic Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>