force-app/main/default/objects/SCOC__LCCharacteristic__c/fields/SCOC__LCRDataSourceAnalysis__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LCRDataSourceAnalysis__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Liquid Credit Response Entity.</description>
    <label>LC Entity Data Source Analysis</label>
    <referenceTo>SCOC__LCRDataSourceAnalysis__c</referenceTo>
    <relationshipLabel>Liquid Credit Analysis Characteristics</relationshipLabel>
    <relationshipName>LCCharacteristic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>